feat: moderniza interface de gestão de estoque sanguíneo